--- a/index.html
+++ b/index.html
@@ -26,8 +26,18 @@
     
             <div class="contact-info">
                 <ul class="contact">
-                    <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                    <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                    <li class="item"> <a href="mailto:info@devstudio.com" class="link">
+                            <svg class="mail-icon">
+                                <use href="./images/icons.svg#icon-envelope"></use>
+                            </svg>
+                            info@devstudio.com</a>
+                    </li>
+                    <li class="item"><a href="tel:+380961111111" class="link">
+                            <svg class="phone-icon">
+                                <use href="./images/icons.svg#icon-smartphone"></use>
+                            </svg>
+                            +38 096 111 11 11</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -42,7 +52,7 @@
         <section class="container-hero section">
             <div class="container">
                  <div class="hero">
-                     <h1 class="title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+                     <h1 class="title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ </br>ДЛЯ ВАШЕГО БИЗНЕСА</h1>
                      <button class="btn" type="button">Заказать услугу</button>
                 </div>
             </div>
@@ -54,18 +64,38 @@
             <div class="container">
                     <ul class="about">
                         <li class="item">
+                            <div class="about-icon-section">
+                            <svg>
+                                <use href="./images/icons.svg#icon-antena"></use>
+                            </svg>
+                            </div>
                             <h3 class="title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
                             <p class="feature">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                         </li>
                         <li class="item">
+                            <div class="about-icon-section">
+                            <svg>
+                                <use href="./images/icons.svg#icon-clock"></use>
+                            </svg>
+                            </div>
                             <h3 class="title">ПУНКТУАЛЬНОСТЬ</h3>
                             <p class="feature">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p> 
                         </li>
                         <li class="item">
+                            <div class="about-icon-section">
+                            <svg>
+                                <use href="./images/icons.svg#icon-plan"></use>
+                            </svg>
+                            </div>
                             <h3 class="title">ПЛАНИРОВАНИЕ</h3>
                             <p class="feature">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                         </li>
                         <li class="item">
+                            <div class="about-icon-section">
+                            <svg>
+                                <use href="./images/icons.svg#icon-astranaut"></use>
+                            </svg>
+                            </div>
                             <h3 class="title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
                             <p class="feature">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                         </li>
@@ -98,6 +128,30 @@
                             <li class="cards"><img src="./images/pro-designer.jpg" alt="Product Designer" width="270" height="260">
                                 <p class="name"><b>Игорь Демьяненко</b></p>
                                 <p class="pofession">Product Designer</p>
+                                <div>
+                                    <ul  class="team-social-icon">
+                                     <li>  
+                                        <svg >
+                                             <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </li>
+                                    <li>
+                                        <svg>
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </li>   
+                                    <li>
+                                        <svg>
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </li>
+                                    <li>
+                                        <svg>
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </li>
+                                    </ul>
+                                </div>
                             </li>
                             <li class="cards">
                                 <img src="./images/developer.jpg" alt="Frontend Developer" width="270" height="260">
