--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Homework 4</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
@@ -20,7 +20,7 @@
             <nav class="navigation">
                 <a href="./" class="logo">Web<span class="web">Studio</span></a>
                 <ul class="site-nav">
-                    <li class="item"><a href="./" class="link ">Студия</a></li>
+                    <li class="item"><a href="./" class="link "> Студия </a></li>
                     <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
                     <li class="item"><a href="" class="link">Контакты</a></li>
                 </ul>
@@ -28,8 +28,17 @@
     
             <div class="contact-info">
                 <ul class="contact">
-                    <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                    <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                    <li class="item">  <a href="mailto:info@devstudio.com" class="link">
+                        <svg class="mail-icon">
+                            <use href="./images/icons.svg#icon-envelope"></use>
+                        </svg>
+                    info@devstudio.com</a>
+                    </li>
+                    <li class="item"><a href="tel:+380961111111" class="link">
+                         <svg class="phone-icon">
+                        <use href="./images/icons.svg#icon-smartphone"></use></svg>
+                        +38 096 111 11 11</a>
+                    </li>
                 </ul>
             </div>
         </div>
