--- a/index.html
+++ b/index.html
@@ -128,30 +128,7 @@
                             <li class="cards"><img src="./images/pro-designer.jpg" alt="Product Designer" width="270" height="260">
                                 <p class="name"><b>Игорь Демьяненко</b></p>
                                 <p class="pofession">Product Designer</p>
-                                <div>
-                                    <ul  class="team-social-icon">
-                                     <li>  
-                                        <svg >
-                                             <use href="./images/icons.svg#icon-instagram"></use>
-                                        </svg>
-                                    </li>
-                                    <li>
-                                        <svg>
-                                            <use href="./images/icons.svg#icon-twitter"></use>
-                                        </svg>
-                                    </li>   
-                                    <li>
-                                        <svg>
-                                            <use href="./images/icons.svg#icon-facebook"></use>
-                                        </svg>
-                                    </li>
-                                    <li>
-                                        <svg>
-                                            <use href="./images/icons.svg#icon-linkedin"></use>
-                                        </svg>
-                                    </li>
-                                    </ul>
-                                </div>
+                               
                             </li>
                             <li class="cards">
                                 <img src="./images/developer.jpg" alt="Frontend Developer" width="270" height="260">
@@ -170,6 +147,58 @@
                             </li>
                         </ul>
                 </div>
+            </div>
+        </section>
+
+        <!-- ПОСТОЯННЫЕ КЛИЕНТЫ -->
+        
+        <section class="container title-clients">
+            <div class="section">
+                <h2 class="">Постоянные клиенты</h2>
+                <ul class="clients-logo">
+                    <li>
+                        <a href=""> 
+                            <svg>
+                                <use href="./images/icons.svg#icon-client-1" width="106px" height=60px></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href=""> 
+                            <svg>
+                                <use href="./images/icons.svg#icon-client-2" width="106px" height=60px></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href=""> 
+                            <svg>
+                                <use href="./images/icons.svg#icon-client-3" width="106px" height=60px></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href=""> 
+                            <svg>
+                                <use href="./images/icons.svg#icon-client-4" width="106px" height=60px></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href=""> 
+                            <svg>
+                                <use href="./images/icons.svg#icon-client-5" width="106px" height=60px></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href=""> 
+                            <svg>
+                                <use href="./images/icons.svg#icon-client-6" width="106px" height=60px></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </section>
     </main>
