--- a/index.html
+++ b/index.html
@@ -157,42 +157,42 @@
                 <h2 class="">Постоянные клиенты</h2>
                 <ul class="clients-logo">
                     <li>
-                        <a href=""> 
+                        <a href="" class="link"> 
                             <svg>
                                 <use href="./images/icons.svg#icon-client-1" width="106px" height=60px></use>
                             </svg>
                         </a>
                     </li>
                     <li>
-                        <a href=""> 
+                        <a href="" class="link"> 
                             <svg>
                                 <use href="./images/icons.svg#icon-client-2" width="106px" height=60px></use>
                             </svg>
                         </a>
                     </li>
                     <li>
-                        <a href=""> 
+                        <a href="" class="link"> 
                             <svg>
                                 <use href="./images/icons.svg#icon-client-3" width="106px" height=60px></use>
                             </svg>
                         </a>
                     </li>
                     <li>
-                        <a href=""> 
+                        <a href="" class="link"> 
                             <svg>
                                 <use href="./images/icons.svg#icon-client-4" width="106px" height=60px></use>
                             </svg>
                         </a>
                     </li>
                     <li>
-                        <a href=""> 
+                        <a href="" class="link"> 
                             <svg>
                                 <use href="./images/icons.svg#icon-client-5" width="106px" height=60px></use>
                             </svg>
                         </a>
                     </li>
                     <li>
-                        <a href=""> 
+                        <a href="" class="link"> 
                             <svg>
                                 <use href="./images/icons.svg#icon-client-6" width="106px" height=60px></use>
                             </svg>
