--- a/portfolio.html
+++ b/portfolio.html
@@ -152,18 +152,55 @@
 <!-- footer -->
     <footer class="footer">
         <div class="container">
-            <a href="./" class="logo">Web<span class="web">Studio</span></a>
-            <address class="address">
-                <p class="street">г. Киев, пр-т Леси Украинки, 26</p>
-                <ul class="getcontact">
-                    <li>
-                        <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-                    </li>
-                    <li>
-                        <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-                    </li>
-                </ul>
-            </address>
+            <div class="footer-flex">
+                <div>
+                    <a href="./" class="logo">Web<span class="web">Studio</span></a>
+                    <address class="address">
+                        <p class="street">г. Киев, пр-т Леси Украинки, 26</p>
+                        <ul class="getcontact">
+                            <li>
+                                <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+                            </li>
+                            <li>
+                                <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+                            </li>
+                        </ul>
+                    </address>
+                </div>
+                <div class="invite">
+                    <h3 class="title">ПРИСОЕДИНЯЙТЕСЬ</h3>
+                    <ul class="foot-icon-list">
+                        <li class="item">
+                            <a href="" class="footer-link">
+                                <svg class="svg-icon">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="item">
+                            <a href="" class="footer-link">
+                                <svg class="svg-icon">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="item">
+                            <a href="" class="footer-link">
+                                <svg class="svg-icon">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="item">
+                            <a href="" class="footer-link">
+                                <svg class="svg-icon">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
