--- a/index.html
+++ b/index.html
@@ -64,40 +64,40 @@
             <div class="container">
                     <ul class="about">
                         <li class="item">
-                            <div class="about-icon-section">
-                            <svg>
-                                <use href="./images/icons.svg#icon-antena"></use>
-                            </svg>
-                            </div>
-                            <h3 class="title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
-                            <p class="feature">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                                <div class="about-icon-section">
+                                    <svg class="icon">
+                                        <use href="./images/icons.svg#icon-antena"></use>
+                                    </svg>
+                                </div>
+                                <h3 class="title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+                                <p class="feature">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                         </li>
                         <li class="item">
-                            <div class="about-icon-section">
-                            <svg>
-                                <use href="./images/icons.svg#icon-clock"></use>
-                            </svg>
-                            </div>
-                            <h3 class="title">ПУНКТУАЛЬНОСТЬ</h3>
-                            <p class="feature">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p> 
+                                <div class="about-icon-section">
+                                    <svg class="icon">
+                                        <use href="./images/icons.svg#icon-clock"></use>
+                                    </svg>
+                                </div>
+                                <h3 class="title">ПУНКТУАЛЬНОСТЬ</h3>
+                                <p class="feature">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p> 
                         </li>
                         <li class="item">
-                            <div class="about-icon-section">
-                            <svg>
-                                <use href="./images/icons.svg#icon-plan"></use>
-                            </svg>
-                            </div>
-                            <h3 class="title">ПЛАНИРОВАНИЕ</h3>
-                            <p class="feature">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                                <div class="about-icon-section">
+                                    <svg class="icon">
+                                        <use href="./images/icons.svg#icon-plan"></use>
+                                    </svg>
+                                </div>
+                                <h3 class="title">ПЛАНИРОВАНИЕ</h3>
+                                <p class="feature">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                         </li>
                         <li class="item">
-                            <div class="about-icon-section">
-                            <svg>
-                                <use href="./images/icons.svg#icon-astranaut"></use>
-                            </svg>
-                            </div>
-                            <h3 class="title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
-                            <p class="feature">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                                <div class="about-icon-section">
+                                    <svg class="icon">
+                                        <use href="./images/icons.svg#icon-astranaut"></use>
+                                    </svg>
+                                </div>
+                                <h3 class="title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+                             <p class="feature">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                         </li>
                     </ul>                
             </div>     
@@ -126,7 +126,7 @@
                         <h2 class="title">Наша команда</h2>
                         <ul class="team-cards">
                             <li class="cards"><img src="./images/pro-designer.jpg" alt="Product Designer" width="270" height="260">
-                                <p class="name"><b>Игорь Демьяненко</b></p>
+                                <p class="name">Игорь Демьяненко</p>
                                 <p class="pofession">Product Designer</p>
                                 <ul class="team-icon-list">
                                     <li class="icon-item">
@@ -161,7 +161,7 @@
                             </li>
                             <li class="cards">
                                 <img src="./images/developer.jpg" alt="Frontend Developer" width="270" height="260">
-                                <p class="name"><b>Ольга Репина</b></p>
+                                <p class="name">Ольга Репина</p>
                                 <p class="pofession">Frontend Developer</p>
                                 <ul class="team-icon-list">
                                     <li class="icon-item">
@@ -196,7 +196,7 @@
                             </li>
                             <li class="cards">
                                 <img src="./images/marketing.jpg" alt="Marketing" width="270" height="260">
-                                <p class="name"><b>Николай Тарасов</b></p>
+                                <p class="name">Николай Тарасов</p>
                                 <p class="pofession">Marketing</p>
                                 <ul class="team-icon-list">
                                     <li class="icon-item">
@@ -231,7 +231,7 @@
                             </li>
                             <li class="cards">
                                 <img src="./images/ui-designer.jpg" alt="UI Designer" width="270" height="260">
-                                <p class="name"><b>Михаил Ермаков</b></p>
+                                <p class="name">Михаил Ермаков</p>
                                 <p class="pofession">UI Designer</p>
                                 <ul class="team-icon-list">
                                     <li class="icon-item">
